--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.1",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-reminder-notifications",
+	"version": "0.1",
+	"description": "Simple notifications for reminders that display on your OS Desktop",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+        "dev-local": "node dev-esbuild.config.mjs"
 	},
 	"keywords": [],
 	"author": "",
@@ -17,7 +18,7 @@
 		"@typescript-eslint/parser": "^5.2.0",
 		"builtin-modules": "^3.2.0",
 		"esbuild": "0.13.12",
-		"obsidian": "^0.12.17",
+		"obsidian": "^0.13.00",
 		"tslib": "2.3.1",
 		"typescript": "4.4.4"
 	}
